PROJECT(kovan-serial)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

FIND_PACKAGE(Qt4 REQUIRED)

SET(INCLUDE ${CMAKE_SOURCE_DIR}/include)
SET(SRC ${CMAKE_SOURCE_DIR}/src)

SET(NETWORK_MANAGER ${CMAKE_SOURCE_DIR}/NetworkManager)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}/src
	${kovan-serial_BINARY_DIR}
	${INCLUDE}
)

SET(QT_USE_QTDBUS TRUE)

INCLUDE(${QT_USE_FILE})

FILE(GLOB INCLUDES ${INCLUDE}/*.hpp)
FILE(GLOB SOURCES ${SRC}/*.cpp)

SET(kovan-serial_SRCS_CXX ${SOURCES})
SET(kovan-serial_MOC_SRCS ${INCLUDES})

QT4_WRAP_CPP(kovan-serial_SRCS_CXX ${kovan-serial_MOC_SRCS})

ADD_DEFINITIONS(-Wall)
ADD_EXECUTABLE(kovan-serial ${kovan-serial_SRCS_CXX})

SET(EXECUTABLE_OUTPUT_PATH ${kovan-serial_SOURCE_DIR}/deploy)
TARGET_LINK_LIBRARIES(kovan-serial ${QT_LIBRARIES} pcompiler kar kovanserial kovan)
